k8s/geth/eth1monitor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eth1monitor
  namespace: pow
spec:
  selector:
    matchLabels:
      app: eth1monitor
  replicas: 1
  template:
    metadata:
      labels:
        app: eth1monitor
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '9090'
    spec:
      containers:
      - name: monitor
        image: gcr.io/prysmaticlabs/eth1monitor:latest
        args:
        - --port=9090
        - --addresses=/etc/config/addresses.txt
        - --web3-url=http://public-rpc-nodes.pow.svc.cluster.local:8545
        volumeMounts:
        - name: addresses
          mountPath: /etc/config
          readOnly: true
      - name: configmap-reload
        image: jimmidyson/configmap-reload:v0.2.2
        args: 
        - --volume-dir=/etc/config
        - --webhook-url=http://localhost:9090/reload
        volumeMounts:
        - name: addresses
          mountPath: /etc/config
          readOnly: true
      volumes:
      - name: addresses
        configMap:
          name: eth1-addresses
