k8s/geth/ethstats.deploy.yaml
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  name: geth-ethstats
  namespace: pow
spec:
  replicas: 1
  selector:
    matchLabels:
      component: ethstats
      universe: geth
  template:
    metadata:
      labels:
        component: ethstats
        universe: geth
    spec:
      priorityClassName: production-priority
      containers:
        - name: ethstats
          image: ethereumex/eth-netstats:latest
          command: ["npm"]
          args: ["start"]
          ports: 
            - containerPort: 3000
              name: web
          resources:
            requests:
              memory: "100Mi"
              cpu: "50m"
            limits:
              memory: "250Mi"
              cpu: "100m"
