k8s/geth/miners.deploy.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: miner
  namespace: pow
  labels:
    universe: geth
    component: miner
spec:
  replicas: 1
  serviceName: "miners"
  selector: 
    matchLabels:
      universe: geth
      component: miner
  template:
    metadata:
      labels:
        universe: geth
        component: miner
    spec:
      priorityClassName: production-priority
      containers:
        - name: miner
          image: ethereum/client-go:alltools-stable
          ports: 
           - containerPort: 8545
             name: rpc
           - containerPort: 8546
             name: ws
           - containerPort: 30303
             name: discovery-tcp
             protocol: TCP
           - containerPort: 30303
             name: discovery-udp
             protocol: UDP
          # Use /bin/sh -c to execute geth so that we have access to HOSTNAME in 
          # the command arguments.
          # https://github.com/kubernetes/kubernetes/issues/57726
          command:
            - "/bin/sh"
            - "-c"
            - >
              [...]
          volumeMounts:
            - name: chaindata
              mountPath: "/ethereum"
            - name: dag
              mountPath: "/dag"
          resources:
            requests:
              memory: "2Gi"
              cpu: "500m"
            limits:
              memory: "4Gi"
              cpu: "500m"
      volumes:
        - name: chaindata
          emptyDir: {}
        - name: genesis
          secret: 
            secretName: geth-genesis
            items:
              - key: json
                path: genesis.json
  volumeClaimTemplates:
    - metadata:
        name: dag
      spec: 
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 5Gi
