k8s/geth/nodes.deploy.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: node
  namespace: pow
  labels:
    universe: geth
    component: node
spec:
  replicas: 3
  serviceName: "node"
  selector: 
    matchLabels:
      universe: geth
      component: node
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        universe: geth
        component: node
    spec:
      priorityClassName: batch-priority
      containers:
        - name: prober
          image: gcr.io/prysmaticlabs/prysm/geth-prober 
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
        - name: node
          image: ethereum/client-go:alltools-stable
          ports: 
           - containerPort: 8545
             name: rpc
           - containerPort: 8546
             name: ws
           - containerPort: 30303
             name: discovery-tcp
             protocol: TCP
           - containerPort: 30303
             name: discovery-udp
             protocol: UDP
          # Use /bin/sh -c to execute geth so that we have access to HOSTNAME in 
          # the command arguments.
          # https://github.com/kubernetes/kubernetes/issues/57726
          command:
            - "/bin/sh"
            - "-c"
            - >
              geth
              --networkid=6284
              --ethstats=prysm-$HOSTNAME:$(ETHSTATS_WS_SECRET)@wss://stats.goerli.net
              --rpc
              --rpcaddr=0.0.0.0
              --rpccorsdomain="*"
              --rpcvhosts="*"
              --ws
              --wsaddr=0.0.0.0
              --wsorigins="*"
              --datadir=/ethereum
              --keystore=/keystore
              --debug
              --verbosity=3
              --nousb
              --lightserv=50
              --metrics
              #--mine
              --etherbase=0xd9a5179f091d85051d3c982785efd1455cec8699
              --extradata="Prysm $HOSTNAME"
          volumeMounts:
            - name: chaindata
              mountPath: /ethereum
            - name: keystore
              mountPath: /keystore
              readOnly: true
          resources:
            requests:
              memory: "1000Mi"
              cpu: "200m"
            limits:
              memory: "1200Mi"
              cpu: "200m"
      volumes:
        - name: networkdata
          configMap: 
            name: goerli
            items:
              - key: genesis
                path: genesis.json
              - key: staticnodes
                path: static-nodes.json
        - name: validator-pk
          secret:
            secretName: goerli-validator-pk
        - name: keystore
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: chaindata
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 50Gi
