k8s/geth/public_nodes.deploy.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: public-node
  namespace: pow
  labels:
    universe: geth
    component: public-rpc-node
    app: prysm
    version: v1
spec:
  replicas: 3
  serviceName: "public-rpc-node"
  selector: 
    matchLabels:
      universe: geth
      component: public-rpc-node
      app: prysm
      version: v1
  template:
    metadata:
      labels:
        universe: geth
        component: public-rpc-node
        app: prysm
        version: v1
    spec:
      priorityClassName: production-priority
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  component: public-rpc-node
              topologyKey: kubernetes.io/hostname
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    component: public-rpc-node
                topologyKey: failure-domain.beta.kubernetes.io/zone
      containers:
        - name: prober
          image: gcr.io/prysmaticlabs/prysm/geth-prober 
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 30
          resources:
            requests:
              memory: "10Mi"
              cpu: "20m"
            limits:
              memory: "10Mi"
              cpu: "20m"
        - name: node
          image: ethereum/client-go:alltools-stable
          ports: 
           - containerPort: 8545
             name: http-rpc
           - containerPort: 8546
             name: http-ws
           - containerPort: 30303
             name: discovery-tcp
             protocol: TCP
           - containerPort: 30303
             name: discovery-udp
             protocol: UDP
          # Use /bin/sh -c to execute geth so that we have access to HOSTNAME in 
          # the command arguments.
          # https://github.com/kubernetes/kubernetes/issues/57726
          command:
            - "/bin/sh"
            - "-c"
            - >
              geth
              --networkid=5
              --bootnodesv4=enode://$(BOOTNODE_PUBKEY)@$(GETH_BOOTNODE_V4_SERVICE_HOST):$(GETH_BOOTNODE_V4_SERVICE_PORT_BOOTNODE_UDP)
              --bootnodesv5=enode://$(BOOTNODE_PUBKEY)@$(GETH_BOOTNODE_V5_SERVICE_HOST):$(GETH_BOOTNODE_V5_SERVICE_PORT_BOOTNODE_UDP)
              --ethstats=💎prylabs-$HOSTNAME:$(ETHSTATS_WS_SECRET)@wss://stats.goerli.net
              --rpc
              --rpcaddr=0.0.0.0
              --rpccorsdomain="*"
              --rpcvhosts="*"
              --ws
              --wsaddr=0.0.0.0
              --wsorigins="*"
              --datadir=/ethereum
              --keystore=/keystore
              --debug
              --verbosity=3
              --nousb
              --lightserv=50
              --metrics
          volumeMounts:
            - name: chaindata
              mountPath: /ethereum
          resources:
            requests:
              memory: "500Mi"
              cpu: "50m"
            limits:
              memory: "1000Mi"
              cpu: "200m"
      volumes:
        - name: networkdata
          configMap: 
            name: goerli
            items:
              - key: genesis
                path: genesis.json
              - key: staticnodes
                path: static-nodes.json
  volumeClaimTemplates:
    - metadata:
        name: chaindata
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 50Gi
