k8s/geth/bootnode.service.yaml
kind: Service
apiVersion: v1
metadata:
  name: geth-bootnode
  namespace: pow
spec:
  selector:
    component: bootnode
    universe: geth
  ports:
    - port: 8545
      targetPort: 8545
      name: rpc
      protocol: TCP
    - port: 30303
      targetPort: 30303
      name: discovery-tcp
      protocol: TCP
    - port: 30303
      targetPort: 30303
      name: discovery-udp
      protocol: UDP
    - port: 30301
      targetPort: 30301
      name: bootnode-udp
      protocol: UDP
